2016-02-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Corrected the date.

  * Makefile.in, */Makefile.in, bootstrap.sh, config.h.in,
    configure.ac, configure:
    refresh

2016-02-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * Makefile.in, */Makefile.in, bootstrap.sh, config.h.in,
    configure.ac, configure, doc/gputils.lyx, gpasm/processor.c:
    New constants: __GPUTILS_SVN_VERSION, __GPUTILS_VERSION_MAJOR,
    __GPUTILS_VERSION_MINOR, __GPUTILS_VERSION_MICRO
    Feature requests: "#64 Better error handling" 4.

2016-02-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/processor.c
    New constants: __12_BIT, __14_BIT, __16_BIT

  * gpasm/directive.c, gpasm/evaluate.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/parse.y, gpasm/processor.c, gpasm/util.c:
    Feature requests: "#64 Better error handling" 3.
    At the end of the first pass will erase the processor-dependent
    constants. These are re-created during of the second pass.

  * gpasm/preprocess:
    Code cosmetic.

2016-02-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/gperror.c, gpasm/gperror.h:
    Feature requests: "#64 Better error handling" 2.

  * gpasm/macro.c, gpasm/macro.h:
    bugfix

  * gpasm/parse.y, gpasm/util.c:
    "char *" --> "const char *" and code cosmetic.

2016-01-31  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Feature requests: "#64 Better error handling" 1.

2016-01-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/asmfiles/eeprom-16f887.asm,
    gpasm/testsuite/gpasm.project/asmfiles/eeprom-16f1937.asm,
    gpasm/testsuite/gpasm.project/asmfiles/eeprom-18f4520.asm,
    gpasm/testsuite/gpasm.project/hexfiles/eeprom-16f887.hex,
    gpasm/testsuite/gpasm.project/hexfiles/eeprom-16f1937.hex,